--- a/root/index.html
+++ b/root/index.html
@@ -19,7 +19,9 @@
     <img class="bg__img bg__img--button" src="/root/imagenes/bg-tablet-pattern.svg" alt="imagenfondo">
 
 <!-- El codigo sera construido inicialmente en su HTML, para ello empezaré con un HEADER
-el cual estará dividido en tres contenedores  -->
+el cual estará dividido en tres contenedores  
+
+PARA DARLE NOMBRE A LAS CLASES SE USO METODOLOGIA BEM-->
 
 <header class="containerheader">
 
@@ -30,14 +32,13 @@ el cual estará dividido en tres contenedores  -->
     <!-- Menu de navegacion  -->
     <nav>
         <ul class="conteinerheader__menu">
-            <il><a class="conteinerheader__menu " href="">Pricing</a></il>
-            <il><a class="conteinerheader__menu " href="">Product</a></il>
-            <il><a class="conteinerheader__menu " href="">About Us</a></il>
-            <il><a class="conteinerheader__menu " href="">Careers</a></il>
-            <il><a class="conteinerheader__menu " href="">Community</a></il>
+            <li><a class="conteinerheader__menu " href="">Pricing</a></li>
+            <li><a class="conteinerheader__menu " href="">Product</a></li>
+            <li><a class="conteinerheader__menu " href="">About Us</a></li>
+            <li><a class="conteinerheader__menu " href="">Careers</a></li>
+            <li><a class="conteinerheader__menu " href="">Community</a></li>
         </ul>
     </nav>
-
     <!-- Boton de acción -->
 
     <button class="containerheader__button"> Get started</button>
@@ -74,8 +75,8 @@ antepondran psedo elementos para los numeros -->
 <section class="containerflex2">
 
     <div class="containerflex2__text">
-        <h2>What´s different about Manage?</h2>
-        <p>
+        <h2 class="containermain__text--letterbig containerflex2__text--letterminus" >What´s different about Manage?</h2>
+        <p class="containermain__text--letterblack">
             Manage provides all the functionality your teas needs, without the complexity. 
             Our software is tailor-made for modern digital product teams
         </p>
@@ -83,28 +84,28 @@ antepondran psedo elementos para los numeros -->
         
     <div class="containerflex2__items">
 
-        <h3 class="lettersmedium">
+        <h3 class="containermain__text--letterbig containerflex2__items--lettersmedium pseudobefore1">
             Track company-wide progress
         </h3>
-        <p class="lettersclear">
+        <p class="containermain__text--letterblack containerflex2__items--letterclear" >
             See how your day-to-day tasks fit into the wider vision. Go from tracking 
             progress at the milestone level all the way done to the smallest of details. 
             Never lose sight of the bigger picture again.
         </p>
 
-        <h3 class="lettersmedium">
+        <h3 class="containermain__text--letterbig containerflex2__items--lettersmedium">
             Advance built-in reports
         </h3>
-        <p class="lettersclear">
+        <p class="containermain__text--letterblack containerflex2__items--letterclear">
             Set internal delivery estimates and track progress toward company goals. 
             Our customisable dashboard helps you build out the reports you need to keep 
             key stakeholders informed.
         </p>
 
-        <h3 class="lettersmedium">
+        <h3 class="containermain__text--letterbig containerflex2__items--lettersmedium">
             Everything you need in one place
         </h3>
-        <p class="lettersclear">
+        <p class="containermain__text--letterblack containerflex2__items--letterclear">
             Stop jumping from one service to another to communicate, store files, 
             track tasks and share documents. Manage offers an all-in-one team productivity 
             solution.
@@ -114,26 +115,38 @@ antepondran psedo elementos para los numeros -->
 
 </section>
 
-<h2>What they´ve said</h2>
+<br>
 
+<center><h2 class="containermain__text--letterbig containerflex2__text--letterminus">What they´ve said</h2></center>
+
+<br>
+<br>
+<br>
+<br>
 <!-- En la seccion de comentarios un contenedor flex grande contiene las cads de
 los comentarios -->
 
 <section class="containercomments">
 
-    <div class="containercomments1">
-        <img src="/root/imagenes/avatar-ali.png" alt="Foto Ali Bravo">
-        <p class="lettersmedium">
-            Ali Bravo
-        </p>
-        <p class="lettersclear">
-            “Manage has supercharged our team´s workflow. The ability to maintain 
-            visibility on larger milestones at all times keeps everyone motivated.”
-        </p>
+    <div class="containercomments__comment">
+        <img class="containercomments__comment--img"src="/root/imagenes/avatar-ali.png" alt="Foto Ali Bravo">
+        <br>
+        <br>
+        <br>
+            <p class="lettersmedium">
+                Ali Bravo
+            </p>
+            <p class="lettersclear">
+                “Manage has supercharged our team´s workflow. The ability to maintain 
+                visibility on larger milestones at all times keeps everyone motivated.”
+            </p>
     </div>
 
-    <div class="containercomments1">
-        <img src="/root/imagenes/avatar-anisha.png" alt="Foto Anisha">
+    <div class="containercomments__comment">
+        <img  class="containercomments__comment--img" src="/root/imagenes/avatar-anisha.png" alt="Foto Anisha">
+        <br>
+        <br>
+        <br>
         <p class="lettersmedium">
             Anisha
         </p>
@@ -144,8 +157,11 @@ los comentarios -->
         </p>
     </div>
 
-    <div class="containercomments1">
-        <img src="/root/imagenes/avatar-richard.png" alt="Foto Richard">
+    <div class="containercomments__comment">
+        <img  class="containercomments__comment--img" src="/root/imagenes/avatar-richard.png" alt="Foto Richard">
+        <br>
+        <br>
+        <br>
         <p class="lettersmedium">
             Richard
         </p>
@@ -155,56 +171,73 @@ los comentarios -->
         </p>
     </div>
 
-
 </section>
 
-<button>Get Started</button>
+<br>
+<br>
+<br>
+
+<button class="containerheader__button contaninermain--button buttoncenter">Get Started</button>
+<br>
+<br>
+<br>
 
 <section class="containerflex3">
-    <h2>
+    <h2 class="containermain__text--letterbig containerflex3__title ">
         Simplify hoy your team
         words today.
     </h2>
 
-    <button class="containerheader__button">Get Started</button>
+    <button class="containerheader__button containerflex3__button ">Get Started</button>
 </section>
 
 <footer class="containerflex4">
 
-    <div class="containerflex4-1">
-        <img src="/root/imagenes/logo.svg" alt="Logo">
-    </div>
+    <span class="containerflex4__imgredes">
 
-    <div class="containerflex4-2">
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-youtube"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-pinterest"></i>
-        <i class="fab fa-instagram"></i>
-    </div>
+        <div>
+            <img src="/root/imagenes/logo.svg" alt="Logo">
+        </div>
 
-    <nav class="containerflex4-3">
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Pricing</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Careers</a></li>
-            <li><a href="">Community</a></li>
-            <li><a href="">Privacy Policy</a></li>
+        <div >
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-pinterest"></i>
+            <i class="fab fa-instagram"></i>
+        </div>
+
+    </span>
+
+    <nav class="containerflex4__nav">
+        <ul class="containerflex4__nav1">
+            <li class="containerflex4__nav"><a href="">Home</a></li>
+            <li class="containerflex4__nav"><a href="">Pricing</a></li>
+            <li class="containerflex4__nav"><a href="">Products</a></li>
+            <li class="containerflex4__nav"><a href="">About Us</a></li>
+        </ul>
+        
+        <ul class="containerflex4__nav1">
+            <li class="containerflex4__nav"><a href="">Careers</a></li>
+            <li class="containerflex4__nav"><a href="">Community</a></li>
+            <li class="containerflex4__nav"><a href="">Privacy Policy</a></li>
         </ul>
     </nav>
 
-    <form action="" class="containerflex4-4">
+    <span class="containerflex4__imgredes">
+
+    <form action="" class="containerflex4__form" method="post">
         <label for="email">
-            <input type="email" id="email" placeholder="Update in your inbox...">
+            <input type="email" id="email" placeholder="Update in your inbox..." required>
         </label>
-            <input type="submit" value="Go">
+            <input  class="containerflex4__imgredes--button"type="submit" value="Go">
     </form>
 
-    <p class="containerflex4-5">
+    <p class="containerflex4__copy">
         Copyright 2020. All Rights Reserved
     </p>
+
+    </span>
 
 </footer>
 </body>
