--- a/index.html
+++ b/index.html
@@ -136,8 +136,6 @@ antepondran psedo elementos para los numeros -->
 <!-- En la seccion de comentarios un contenedor flex grande contiene las cads de
 los comentarios -->
 
-
-
 <section class="containercomments">
 
     <div class="containercomments__comment">
@@ -185,11 +183,13 @@ los comentarios -->
 
 </section>
 
+<!-- carrusel responsive -->
+
 <section id="conteitemscarrusel">
 
     <div class="itemcarrusel" id="itemcarrusel1">
         <div class="tarjetacarrusel1" id="tarjetacarrusel1-1">
-            <img src="./imagenes/CC7CCF7B-6FC4-413D-B1F9-FFC39C400F8B_4_5005_c.jpeg" alt="">
+            <img src="./imagenes/Caro_card_1.jpg" alt="">
         </div>
         <div class="flechascarrusel1">
             <a href="#tarjetacarrusel1-3"><i class="fas fa-arrow-circle-left"></i></a>
@@ -199,7 +199,7 @@ los comentarios -->
 
     <div class="itemcarrusel" id="itemcarrusel2">
         <div class="tarjetacarrusel1" id="tarjetacarrusel1-2">
-            <img src="./imagenes/F7999263-7DB1-47CC-958E-9813569BF923_4_5005_c.jpeg" alt="">
+            <img src="./imagenes/Caro_card_2.jpg" alt="">
         </div>
         <div class="flechascarrusel1">
             <a href="#tarjetacarrusel1-1"><i class="fas fa-arrow-circle-left"></i></a>
@@ -209,7 +209,7 @@ los comentarios -->
 
     <div class="itemcarrusel" id="itemcarrusel3">
         <div class="tarjetacarrusel1" id="tarjetacarrusel1-3">
-            <img src="./imagenes/392F268C-FDE0-4A49-BABC-0CBED9A9ADB0_4_5005_c.jpeg" alt="">
+            <img src="./imagenes/Caro_card_3.jpg" alt="">
         </div>
         <div class="flechascarrusel1">
             <a href="#tarjetacarrusel1-2"><i class="fas fa-arrow-circle-left"></i></a>
@@ -217,6 +217,14 @@ los comentarios -->
         </div>
     </div>
 </section>
+
+<div id="contepuntos">
+    <a href="#tarjetacarrusel1-1"><i class="fas fa-dot-circle"></i></a>
+    <a href="#tarjetacarrusel1-2"><i class="fas fa-dot-circle"></i></a>
+    <a href="#tarjetacarrusel1-3"><i class="fas fa-dot-circle"></i></a>
+</div>
+
+<!-- fin carrusel -->
 
 <br>
 <br>
@@ -230,13 +238,15 @@ los comentarios -->
 
 <section class="containerflex3">
     <h2 class="containermain__text--letterbig containerflex3__title ">
-        Simplify hoy your team <br> words today.
+        Simplify how your team <br> words today.
     </h2>
     <div class="containerflex3__buttondiv">
         <button class="containerheader__button containerflex3__button ">Get Started</button>
     </div>
     <br>
 </section>
+
+<!-- html footer -->
 
 <footer class="containerflex4">
 
